--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
+    "@babel/runtime": "^7.1.5",
     "@material-ui/core": "^1.5.1",
     "@material-ui/icons": "^2.0.3",
     "classnames": "^2.2.6",
