--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-swipeable-views": "^0.13.0",
     "recharts": "^1.1.0"
   },
   "meteor": {
